--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 .nav-link{
     font-family: 'Roboto', sans-serif !important;
     /* justify-content: space-between; */
-    color:black!important;
+    color:white!important;
     font-size: 25px;
     /* width: 100%; */
 }
